# pi-pico-resources

Code for Tasks/task01-blinky-folder/: CMakeLists.txt  task01-blinky.c
Code for Tasks/task02-helloworld-folder/: CMakeLists.txt  task02-helloworld.c
Code for Tasks/task03-serial-input-folder/: CMakeLists.txt  task03-serial-input.c
Working Examples/01-blinky-folder/: CMakeLists.txt  blinky.c
Working Examples/02-helloworld-extension/: CMakeLists.txt  helloworldext.c
Working Examples/02-helloworld-folder/: CMakeLists.txt  helloworld.c
Working Examples/03-serial-input-extension/: CMakeLists.txt  serial-input-ext.c
Working Examples/03-serial-input-folder/: CMakeLists.txt  serial-input.c
